--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "firebase": "^10.11.1",
+    "firebase-admin": "^12.1.0",
     "next": "14.2.3",
     "nodemailer": "^6.9.13",
     "react": "^18",
@@ -23,6 +24,7 @@
     "@types/uuid": "^9.0.8",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "null-loader": "^4.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
